--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
         
 
         <section>
+        <div class="bots">
             <h2>Check Out Our Bots!</h2>
             <button onclick="window.location.href='summarizer.html'">Go to Summarizer Bot</button>
             <button onclick="window.location.href='paraphraser.html'">Go to Paraphraser Bot</button>
+        </div>
         </section>
 
         
