--- a/Summarizer.html
+++ b/Summarizer.html
@@ -36,6 +36,8 @@
                 <label for="inputText">Enter Text for Summarization:</label>
                 <textarea id="inputText" rows="10" cols="50"></textarea>
                 <button onclick="summarizeText()">Summarize</button>
+                <button onclick="copyText()">Copy</button>
+                <button onclick="clearText()">Clear</button>
             </div>
             
             <div class="output-container">
@@ -65,6 +67,16 @@
                 .catch(error => {
                     console.error('Error fetching data:', error);
                 });
+        }
+        function copyText() {
+            var outputTextArea = document.getElementById("outputText");
+            outputTextArea.select();
+            document.execCommand("copy");
+        }
+
+        function clearText() {
+            document.getElementById("inputText").value = "";
+            document.getElementById("outputText").value = "";
         }
     </script>
 
